fixtures/python/test_double/should_fail/runtime_test_support_import.py
from tests.helpers import fake_user
